--- a/src/assets/styles/react-table.css
+++ b/src/assets/styles/react-table.css
@@ -1,9 +1,9 @@
 table.react-collapsible {
   font-family: Helvetica, Arial, "sans-serif";
+    font-size: 62.5%;
 }
 table.react-collapsible thead {
   text-transform: uppercase;
-  font-size: 1rem;
   letter-spacing: 0.1rem;
   margin-top: 0;
   margin-bottom: 0.2rem;
