added searching highlight

--- a/src/assets/styles/react-table.css
+++ b/src/assets/styles/react-table.css
@@ -87,3 +87,7 @@ table.react-collapsible {
 .react-collapsible-page .arrow-right {
   margin-left: .8rem;
 }
+
+.highlight {
+  background-color: #FFFF00
+}
